--- a/home.html
+++ b/home.html
@@ -8,8 +8,9 @@
   
   <title >Radcon Engineering</title>
 
-  
+
 <body>
+ 
 
  <header class="header"> 
   <nav class="navbar"> 
@@ -836,7 +837,7 @@ contactpop.style.display = 'none';
       <button class="accordion-toggle">+</button>
     </div>
     <ul class="accordion-content">
-        <p>Quality is paramount to us. We employ strict quality control measures throughout the fabrication process to ensure that every piece meets or exceeds industry standards. <i class="fas fa-check" style="color: gray;"></i></p>
+        <p>Quality is paramount to us. We employ strict quality control measures throughout the fabrication process to ensure that every piece meets or exceeds industry standards.</p>
     </ul>
 </div>
 
@@ -847,7 +848,7 @@ contactpop.style.display = 'none';
     <button class="accordion-toggle">+</button>
   </div>
   <ul class="accordion-content">
-      <p>Our lead times vary depending on the complexity and scope of your project. We work closely with our clients to provide accurate project timelines, ensuring efficient and timely deliveries. <i class="fas fa-clock" style="color: gray;"></i></p>
+      <p>Our lead times vary depending on the complexity and scope of your project. We work closely with our clients to provide accurate project timelines, ensuring efficient and timely deliveries.</p>
   </ul>
 </div>
 
@@ -858,7 +859,7 @@ contactpop.style.display = 'none';
     <button class="accordion-toggle">+</button>
   </div>
   <ul class="accordion-content">
-      <p>Our metal fabrication expertise spans a wide range of materials, including steel, aluminum, and stainless steel. We're equipped to handle diverse projects, ensuring top-notch quality and precision in every piece we create. <i class="fas fa-cogs" style="color: gray;"></i></p>
+      <p>Our metal fabrication expertise spans a wide range of materials, including steel, aluminum, and stainless steel. We're equipped to handle diverse projects, ensuring top-notch quality and precision in every piece we create. </p>
   </ul>
 </div>
 
@@ -869,7 +870,7 @@ contactpop.style.display = 'none';
     <button class="accordion-toggle">+</button>
   </div>
   <ul class="accordion-content">
-      <p>Our facility is equipped for projects of all sizes. Whether it's a small custom piece or a large-scale industrial project, we have the capacity and expertise to meet your needs. <i class="fas fa-wrench" style="color: gray;"></i></p>
+      <p>Our facility is equipped for projects of all sizes. Whether it's a small custom piece or a large-scale industrial project, we have the capacity and expertise to meet your needs. </p>
   </ul>
 </div>
 
@@ -1069,38 +1070,6 @@ margin-top: 25px;
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 footer {
   font-family: Arial, sans-serif;
   margin: 0;
@@ -1119,6 +1088,7 @@ footer {
 .footer-section {
   flex: 1;
   margin: 0 10px;
+  padding: 3px;
 }
 
 .footer-section h4 {
@@ -1174,8 +1144,7 @@ footer {
             <li><a href="milling.html">Milling</a></li>
             <li><a href="custom.html">Custom Fabrication</a></li>
             <li><a href="cutting.html">Cutting</a></li>
-            <li><a href="cutting.html">General Engineering</a></li>
-            <li><a href="cutting.html">Metal Products</a></li>
+            <li><a href="learn.html">Learn More</a></li>
           </ul>
       </div>
   </div>
