--- a/home.html
+++ b/home.html
@@ -8,7 +8,7 @@
   
   <title >Radcon Engineering</title>
 
-
+  
 <body>
  
 
@@ -206,6 +206,7 @@ margin-left: 6px;
 
   #emos{
     color: rgb(255, 255, 255);
+    font-size: 23px;
   }
 
   .view-more-btnn {
@@ -264,7 +265,7 @@ margin-left: 6px;
 
 
   <div class="cad">
-      <i class="emos"  style="margin-bottom: 10px; background-color:rgb(0, 65, 177);width: 50px; height:40px; padding-top: 8px;border-radius: 8px;" class="fas fa-hammer"></i> <!-- Font Awesome icon -->
+      <i id="emos"  style="margin-bottom: 10px; background-color:rgb(0, 65, 177);width: 50px; height:40px; padding-top: 8px;border-radius: 8px;" class="fas fa-hammer"></i> <!-- Font Awesome icon -->
       <h3>Milling</h3>
       <h5 class="liner">_________</h5>
       <p style="font-size: 13px;margin-top: 20px;">We can customize could make more Your Metal with our experirience in Metal Fabrication... </p>
@@ -272,7 +273,7 @@ margin-left: 6px;
   </div>
 
   <div class="cad">
-      <i  class="emos"  style="margin-bottom: 10px; background-color:rgb(0, 65, 177);width: 50px; height:40px; padding-top: 8px;border-radius: 8px;" class="fas fa-tools"></i> <!-- Font Awesome icon -->
+      <i  id="emos"  style="margin-bottom: 10px; background-color:rgb(0, 65, 177);width: 50px; height:40px; padding-top: 8px;border-radius: 8px;" class="fas fa-tools"></i> <!-- Font Awesome icon -->
       <h3>Cutting</h3>
       <h5 class="liner">_________</h5>
       <p style="font-size: 13px; margin-top: 20px;">We can customize could make more Your Metal with our experirience in Metal Fabrication... </p>
@@ -280,7 +281,7 @@ margin-left: 6px;
   </div>
 
   <div class="cad">
-      <i  class="emos"   style="margin-bottom: 10px; background-color: rgb(0, 65, 177); width: 50px; height:40px; padding-top: 8px;border-radius: 8px;" class="fas fa-cog"></i> <!-- Font Awesome icon -->
+      <i  id="emos"   style="margin-bottom: 10px; background-color: rgb(0, 65, 177); width: 50px; height:40px; padding-top: 8px;border-radius: 8px;" class="fas fa-cog"></i> <!-- Font Awesome icon -->
       <h3>Custom Fabrication</h3>
       <h5 class="liner">_________</h5>
       <p style="font-size: 13px; margin-top: 20px;">We can customize could make more Your Metal  and experirience in Metal Fabrication... </p>
@@ -502,8 +503,8 @@ margin-top: 25px;
   }
 
   .card i {
-    font-size: 24px;
-    color: rgb(0, 0, 0); /* Adjust the icon size as needed */
+    font-size: 17px;
+    color:  rgb(0, 56, 152); /* Adjust the icon size as needed */
   }
 
   .view-more-btn {
@@ -535,7 +536,7 @@ margin-top: 25px;
 <div  class="container">
   <div style="background-image: url(metal.jpg); background-size: 217% auto;background-repeat: no-repeat; background-position:65%;">
   <div class="card" >
-      <i style="margin-bottom: 10px; background-color:rgb(255, 255, 255); width: 50px; height:40px; padding-top: 8px;border-radius: 8px;" class="fas fa-clock"></i> <!-- Font Awesome icon -->
+      <i style="margin-bottom: 10px; background-color:rgba(255, 255, 255, 0.82); width: 40px; height:35px; padding-top: 8px;border-radius: 8px;" class="fas fa-clock"></i> <!-- Font Awesome icon -->
       <h3>Opening Hours</h3>
       <h5 class="liner">_________</h5>
       <p style="font-size: 13px; margin-top: 20px;"> view our opening and closing times.</p>
@@ -549,7 +550,7 @@ margin-top: 25px;
   <div style="background-image: url(radcon.jpg); background-size: 120% auto;background-repeat: no-repeat; background-position:65%;">
       <div class="card" >
   
-      <i  style="margin-bottom: 10px; filter:none ;  background-color:rgb(255, 255, 255);width: 50px; height:40px; padding-top: 8px;border-radius: 8px;" class="fas fa-map-marker"></i> <!-- Font Awesome icon -->
+      <i  style="margin-bottom: 10px; filter:none ;  background-color:rgba(255, 255, 255, 0.82); width: 40px; height:35px; padding-top: 8px;border-radius: 8px;" class="fas fa-map-marker"></i> <!-- Font Awesome icon -->
       <h3> Address </h3>
       <h5 class="liner">_________</h5>
       <p style="font-size: 13px;margin-top: 20px;">Find Our Location and Address. </p>
@@ -559,7 +560,7 @@ margin-top: 25px;
 
   <div style="background-image: url(radcon.jpg); background-size: 120% auto;background-repeat: no-repeat; background-position:65%;">
       <div class="card" >
-      <i  style="margin-bottom: 10px; background-color:rgb(255, 255, 255);width: 50px; height:40px; padding-top: 8px;border-radius: 8px;" class="fas fa-phone"></i> <!-- Font Awesome icon -->
+      <i  style="margin-bottom: 10px; background-color:rgba(255, 255, 255, 0.82); width: 40px; height:35px; padding-top: 8px;border-radius: 8px;" class="fas fa-phone"></i> <!-- Font Awesome icon -->
       <h3>Contact</h3>
       <h5 class="liner">_________</h5>
       <p style="font-size: 13px; margin-top: 20px;"> Contact Us Instantly </p>
@@ -568,7 +569,7 @@ margin-top: 25px;
   </div>
   <div style="background-image: url(metal.jpg); background-size: 230% auto;background-repeat: no-repeat; background-position:65%;">
       <div class="card" >
-      <i  style="margin-bottom: 10px; background-color: rgb(255, 255, 255); width: 50px; height:40px; padding-top: 8px;border-radius: 8px;" class="fas fa-newspaper"></i> <!-- Font Awesome icon -->
+      <i  style="margin-bottom: 10px; background-color: rgba(255, 255, 255, 0.82); width: 40px; height:35px; padding-top: 8px;border-radius: 8px;" class="fas fa-newspaper"></i> <!-- Font Awesome icon -->
       <h3>Articles</h3>
       <h5 class="liner">_________</h5>
       <p style="font-size: 13px; margin-top: 20px;">View Our Articles</p>
@@ -698,7 +699,6 @@ margin-top: 25px;
  padding:10px;
 
      }
-
 
 .popup,.pop, .contact-pop {
 position: fixed;
@@ -1066,6 +1066,8 @@ margin-top: 25px;
 </div>
 
 
+<hr class="centered">
+
 <style>
 
 
@@ -1088,7 +1090,7 @@ footer {
 .footer-section {
   flex: 1;
   margin: 0 10px;
-  padding: 3px;
+  padding: 5px;
 }
 
 .footer-section h4 {
