--- a/home.html
+++ b/home.html
@@ -284,7 +284,7 @@ margin-left: 6px;
       <i  id="emos"   style="margin-bottom: 10px; background-color: rgb(0, 65, 177); width: 50px; height:40px; padding-top: 8px;border-radius: 8px;" class="fas fa-cog"></i> <!-- Font Awesome icon -->
       <h3>Custom Fabrication</h3>
       <h5 class="liner">_________</h5>
-      <p style="font-size: 13px; margin-top: 20px;">We can customize could make more Your Metal  and experirience in Metal Fabrication... </p>
+      <p style="font-size: 13px; margin-top: 20px;">We can customize could make more Your Metal with our experirience in Metal Fabrication...</p>
       <a href="custom.html" class="view-more-btnn">View More</a>
   </div>
 </div>
@@ -308,7 +308,7 @@ margin-left: 6px;
     padding: 10px;
     background-color: #ffffffe0;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-    border-radius: 10px;
+    border-radius: 8px;
   }
 
   .card-title {
@@ -322,8 +322,8 @@ margin-left: 6px;
      height: 38px;
     
      color:#fff;
-     border-radius: 10px;
-     padding-top: 7px;
+     border-radius: 8px;
+     padding-top: 6px;
      
 
 
@@ -343,13 +343,13 @@ margin-top: 25px;
   @media screen and (min-width: 768px) {
     /* For screens wider than 768px */
     .about-radcon-card {
-      max-width: 700px;
+      max-width: 980px;
       margin: 20px auto;
     }
   }
 </style>
 
-<div style="background-color: rgba(0, 65, 177, 0.2); padding:1px;margin-top: 50px;  background-size:cover;">
+<div style="background-color: rgba(0, 65, 177, 0.2); padding:1px;margin-top: 26px;  background-size:cover;">
 <section class="about-radcon-card" style="margin-top: 15px; ">
 
   <h3 class="card-title"><i class="fas fa-industry icon" style="padding-right:10px; font-size: 20px;"></i>About Radcon Engineering</h3>
@@ -370,7 +370,7 @@ margin-top: 25px;
   <h4 align="center" class="centered-text" style="margin-top: 15px; font-size: 14px; color: rgb(0, 65, 177);"><i class="fas fa-cogs rounded-sign-icon"></i> Our Area of Mastery</h4>
 
   <div style="padding: 1px;margin-top:-5px;">
-    <hr class="centered">
+   
 
 
   <p  class="exp"><i  style="color:rgb(0, 65, 177);" class="fas fa-check-circle exp-icon"></i> Our expertise spans a wide spectrum,
@@ -384,7 +384,7 @@ margin-top: 25px;
 
   <h4  id="timeb" align="center" class="centered-text" style="margin-top: 15px; font-size: 14px; color: rgb(0, 65, 177);"><i class="fas fa-cogs rounded-sign-icon"></i> What Sets Us Apart?</h4>
   <div style="padding: 1px; margin-top:-5px;">
-    <hr class="centered">
+   
   </div>
   <p class="exp"><i  style="color:rgb(0, 65, 177);" class="fas fa-check-circle exp-icon"></i> <b style="color:rgb(0, 65, 177);">Uncompromising Precision:</b> At Radcon Engineering,
      precision is not just a goal; it's a commitment.
