--- a/home.html
+++ b/home.html
@@ -52,7 +52,7 @@ navMenu.classList.toggle("active");
 
 </script>
 
-<main class="main-image"style="padding-top:8%; font-size: 155%; margin-top:10px;     background-image:URL(metal.jpg); background-repeat:no-repeat;  background-size:cover;">
+<main class="main-image"style="padding-top:8%; font-size: 155%; margin-top:10px;     background-image:URL(metal.jpg); background-repeat:no-repeat;  background-size:cover;" loading="lazy">
   
 
    <div class="metal-fabricator">
