--- a/home.html
+++ b/home.html
@@ -8,7 +8,6 @@
   
   <title >Radcon Engineering</title>
 
-  
 <body>
  
 
@@ -636,7 +635,7 @@ margin-top: 25px;
               <div class="locator">
 
 
-                  <h4 class="real-loc"  style="max-width: 83px;">Map</h4><br/>
+                  <h4 class="real-loc"  style="max-width: 45px;">Map</h4><br/>
                   <!--Map Here and Should be Centered -->
                   <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13240.080996606332!2d25.6099461!3d-33.9406073!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1e7ad3abf356aaab%3A0xe4d64c725f7da8b8!2sRadcon%20Engineering!5e0!3m2!1sen!2sza!4v1705248027320!5m2!1sen!2sza" width="100%" height="350" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe><br/>
 
@@ -1167,7 +1166,7 @@ footer {
           </ul>
       </div>
   </div>
-  <p align="center" style="font-size:9px; padding: 10px;"> &copy; 2023 Radcon. All Rights Reserved. Made by skilsiter</p>
+  <p align="center" style="font-size:9px; padding: 10px;"> &copy; 2023 Radcon. All Rights Reserved. Powered by <a href="#" style="color: #d0cdcd; font-size: 11px;">KnackPass</a></p>
 </footer>
 
 
